# Binox

./: .dockerignore  .gitignore  Dockerfile  README.md  architecture.md  docker-compose.yml  evaluation.md  pyproject.toml
src/: __init__.py
src/binox_agent/: __init__.py  cli.py  content.py  guardrails.py  mock_social.py  models.py  reply.py  service.py
workflows/: n8n-stock-loop.json
